# totalcross

./: .astylerc  .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmessage.txt  .gitmodules  .travis.yml  .uncrustify-ignore  .uncrustify.cfg  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  Jenkinsfile  README.md  TESTING.md  build-ios.sh  build.xml  ivy.xml  ivy_ant-jars.xml  ivy_extlibs.xml  ivysettings.xml  jenkins-sa.json.enc  package-android.sh  package-ios.sh  package-sdk.sh  package.sh  setup-ios.sh  test.sh  totalcross.code-workspace
LitebaseSDK/builders/gcc/: COPYING  Makefile.am  autogen.sh  build.sh  configure.ac
TotalCrossVM/: .gitignore  .project  CMakeLists.txt  Doxyfile  fetch-depot-tools.sh
TotalCrossVM/android/: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
TotalCrossVM/android/app/: build.gradle  proguard-rules.pro
TotalCrossVM/android/tcvm/: build.gradle
TotalCrossVM/ant/: build.xml
TotalCrossVM/builders/: .gitignore  build-linux.sh  build.xml  palmreadme.txt  sdk_sfx.diz  vms_noras_sfx.diz  vms_sfx.diz
TotalCrossVM/builders/android/: GNUmakefile  README.TXT
TotalCrossVM/builders/droid/: .gitignore  README.MD  build.gradle  build.sh  go.bat  google-services.json  gradle.properties  inst.bat  local.properties  tcandroidkey.keystore
TotalCrossVM/builders/evc3/: .gitignore  Bematech.vcp  Bematech1.vcp  Datalogic.vcp  Dolphin.vcp  Intermec.vcp  Launcher.vcp  Litebase.vcp  Litebase200.vcp  Motorola.vcp  OpticonH16.vcp  SocketScan.vcp  Symbol.vcp  TotalCross.vcp  TotalCross.vcw  tc.aps  tc.rc
TotalCrossVM/builders/evc4/: Launcher.vcp  Litebase200.vcp  TotalCross.vcp  TotalCross.vcw  tc.aps
TotalCrossVM/builders/gcc-linux-arm/: README.md
TotalCrossVM/builders/gcc-palm/: common.mk  readme.txt
TotalCrossVM/builders/gcc-posix/: build.sh
TotalCrossVM/builders/theos/: .gitignore  Makefile  build.sh  control
TotalCrossVM/builders/vc2008/: .gitignore  Bematech.vcproj  Conduit.vcproj  Datalogic.vcproj  Dolphin.vcproj  Intermec.vcproj  Launcher.vcproj  Motorola.vcproj  OpticonH16.vcproj  Pidion.vcproj  TCVM.sln  TCVM.vcproj  build.bat  build.gradle  fixwin32exe.bat  litebase.vcproj  litebase200.vcproj  tc.rc
TotalCrossVM/builders/vc2013/: .gitignore  Launcher.vcxproj  Launcher.vcxproj.filters  TotalCross.sln  litebase.vcproj  litebase.vcxproj  litebase.vcxproj.filters
TotalCrossVM/builders/vc2013win/: .gitignore  TCVM.sln  TCVM.vcproj  TCVM.vcxproj  TCVM.vcxproj.filters  tc.aps  tc.rc
TotalCrossVM/builders/vc2017/: Conduit.vcproj  Intermec.vcproj  Launcher.vcproj  OpticonH16.vcproj  TCVM.sln  TCVM.vcproj  TCVM.vcxproj  TCVM.vcxproj.filters  fixwin32exe.bat
TotalCrossVM/builders/vc6/: .gitignore  Launcher.dsp  TCSync.dsp  TCVM.dsp  TCVM.dsw  litebase.dsp
TotalCrossVM/builders/xcode/: .gitignore  ExportOptions.plist  Launch Screen.storyboard  Podfile  UIGadgets.tcz  build.sh  libtcvm.h  libtcvm.m  tcvm-Prefix.pch
TotalCrossVM/cmake/toolchains/: linux-arm32v7.cmake
TotalCrossVM/debugger/: pom.xml
TotalCrossVM/docker/: README.MD
TotalCrossVM/docker/amd64/: Dockerfile  build-docker.sh  cmake.sh
TotalCrossVM/docker/android/: Dockerfile  cmake.sh
TotalCrossVM/docker/arm32v7/: Dockerfile  build-docker.sh  cmake.sh
TotalCrossVM/docker/arm64/: Dockerfile  build-docker.sh  cmake.sh
TotalCrossVM/docker/totalcross_sdk/: Dockerfile
TotalCrossVM/mbedtls/: AutoFetchMbedTLS.cmake  fetch-mbedtls.sh
TotalCrossVM/modules/: FindMbedTLS.cmake  FindSDL2.cmake  FindSQLite3.cmake  FindSkia.cmake
TotalCrossVM/skia/: AutoFetchSkia.cmake  artifacts.json  fetch-skia.sh
TotalCrossVM/sqlite3/: AutoFetchSQLite3.cmake  fetch-sqlite3.sh
TotalCrossVM/src/: libtcvm.h  libtcvm.m
TotalCrossVM/src/axtls/: aes.c  asn1.c  axssl_config.h  axtls.h  bigint.c  bigint.h  bigint_impl.h  cert.h  crypto.h  crypto_misc.c  crypto_misc.h  hmac.c  loader.c  md2.c  md5.c  openssl.c  os_int.h  os_port.c  os_port.h  p12.c  private_key.h  rc4.c  rsa.c  sha1.c  sha256.c  sha384.c  sha512.c  ssl.h  tls1.c  tls1.h  tls1_clnt.c  tls1_svr.c  version.h  x509.c
TotalCrossVM/src/dx/: Direct3DBase.cpp  Direct3DBase.h  Direct3DContentProvider.cpp  Direct3DContentProvider.h  DirectXHelper.h  Idummy.h  PhoneDirect3DXamlAppComponent.cpp  PhoneDirect3DXamlAppComponent.h  PixelShaderTexture.hlsl  VertexShaderGlobalColor.hlsl  VertexShaderLocalColor.hlsl  VertexShaderTexture.hlsl  cswrapper.h
TotalCrossVM/src/event/: Event.c  event.h  specialkeys.c  specialkeys.h
TotalCrossVM/src/init/: compilation.date  demo.c  demo.h  globals.c  globals.h  nativeHT.c  nativeProcAddresses.c  nativeProcAddresses.h  nativeProcAddressesTC.c  nativeProcAddressesTC.h  rvmdebug.c  rvmdebug.h  rvmdebug_calls.c  rvmdebug_calls.h  rvmdebug_types.h  settings.c  settings.h  startup.c  startup.h  tcsdl.cpp  tcsdl.h  testdbg.c  testdbg.h
TotalCrossVM/src/jni/: Android.mk  Application.mk  options_demo.mk
TotalCrossVM/src/jpeg/: JpegLoader.c  cderror.h  cdjpeg.c  cdjpeg.h  cjpeg.c  ckconfig.c  djpeg.c  errorlist  example.c  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jchuff.h  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jconfig.h  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatadst_tc.c  jdatasrc.c  jdatasrc_tc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  (+51 more)
TotalCrossVM/src/litebase/: Constants.h  Index.c  Index.h  Key.c  Key.h  Litebase.c  Litebase.h  LitebaseGlobals.c  LitebaseGlobals.h  LitebaseTypes.h  Macros.h  MarkBits.c  MarkBits.h  MemoryFile.c  MemoryFile.h  NativeMethods.c  NativeMethods.h  NativeMethodsPrototypes.txt  Node.c  Node.h  NormalFile.c  NormalFile.h  PlainDB.c  PlainDB.h  PreparedStatement.c  (+15 more)
TotalCrossVM/vc2008/: .gitignore  Bematech.vcproj  Conduit.vcproj  Datalogic.vcproj  Dolphin.vcproj  Intermec.vcproj  Launcher.vcproj  Motorola.vcproj  OpticonH16.vcproj  Pidion.vcproj  README.md  TCVM.sln  TCVM.vcproj  build.bat
TotalCrossVM/xcode/: .gitignore  ExportOptions.plist  Podfile  README.MD
(+5673 files in other folders)
